--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <body>
  <h1>
  	<div class="title">Joanna A. Sanchez Rocha<br><hr width=60%></div>
- 	<div class="subtitle"> Student. Enginner enthusiast.Taco Chef.</div>
+ 	<div class="subtitle"> Student. Engineer enthusiast.Taco Chef.</div>
  </h1>
 
  	asdf
