--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Joanna Sanchez</title>
-	<!--<link rel="stylesheet" type="text/css" href="main.css">-->
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 	
