--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="header">
 		<div class+"container">
 			<div class="container-top">
-				<div class="menu">
+				<div class="menu clearfix">
 					<div class="menu-item">Home</div>
 					<div class="menu-item">About Me</div>
 					<div class="menu-item">Community Work</div>
